[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-unanswered"
version = "0.3.0"
description = "Find GitHub issues where you were @mentioned but haven't replied since"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Aron Novak" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]

[project.scripts]
gh-unanswered = "gh_unanswered.cli:main"

[project.urls]
Homepage = "https://github.com/AronNovak/gh-unanswered"
